--- a/src/app/componentes/editar-evento/editar-evento.component.html
+++ b/src/app/componentes/editar-evento/editar-evento.component.html
@@ -25,7 +25,7 @@
       </select>
   </div>
 
-  <!-- Campo Dirección 
+  <!-- Campo Dirección
   <div class="mb-3">
       <label class="form-label">Dirección:</label>
       <input type="text" class="form-control" formControlName="direccion"/>
@@ -50,15 +50,15 @@
   <div formArrayName="localidades" class="mb-3">
       <label class="form-label">Localidades:</label>
       <button type="button" class="btn btn-primary btn-sm mb-2" (click)="agregarLocalidad()">Agregar localidad</button>
-      
+
       <div *ngFor="let localidad of localidades.controls; let i = index" [formGroupName]="i" class="mb-2">
           <div class="input-group mb-2">
               <!-- Campo Nombre Localidad -->
               <input type="text" class="form-control" formControlName="nombre" placeholder="Nombre de la localidad"/>
-              
+
               <!-- Campo Precio Localidad -->
               <input type="number" class="form-control" formControlName="precio" placeholder="Precio"/>
-              
+
               <!-- Campo Capacidad Máxima Localidad -->
               <input type="number" class="form-control" formControlName="capacidadMaxima" placeholder="Capacidad máxima"/>
 
@@ -76,7 +76,7 @@
           <button type="button" class="btn btn-primary" (click)="subirImagen('portada')">
               <i class="fa-solid fa-cloud-arrow-up"></i> actualizar localidad
           </button>
-          <img src="{{crearEventoForm.get('imagenPortada')?.value}}" width="100px" />
+          <img src="{{crearEventoForm.get('imagenPortada')?.value.url}}" width="100px" />
       </div>
   </div>
 
@@ -88,7 +88,7 @@
           <button type="button" class="btn btn-primary" (click)="subirImagen('localidades')">
               <i class="fa-solid fa-cloud-arrow-up"></i> actualizar localidad
           </button>
-          <img src="{{crearEventoForm.get('imagenLocalidades')?.value}}" width="100px" />
+          <img src="{{crearEventoForm.get('imagenLocalidades')?.value.url}}" width="100px" />
       </div>
   </div>
 
