--- a/src/app/componentes/obtener-cuenta/obtener-cuenta.component.html
+++ b/src/app/componentes/obtener-cuenta/obtener-cuenta.component.html
@@ -37,9 +37,10 @@
   
          <div class="col-12 text-center">
           <button type="button" [routerLink]="['/editar-cuenta', obtenerIdCuenta()]" class="btn btn-primary">Editar Perfil</button>
+          </div>
+          <div class="col-12 text-center mt-2">
           <button type="button" [routerLink]="['/cambiar-contrasenia',obtenerIdCuenta()]" class="btn btn-primary">Cambiar Contraseña</button>
-          <button type="button" [routerLink]="['/historial-compras', obtenerIdCuenta()]" class="btn btn-primary">Historial</button>
-          <button type="button" [routerLink]="['/gestion-mis-boletas']" class="btn btn-primary">Boletas</button>
+          
         </div>
         <div class="col-12 text-center">
           <!-- Otros botones -->
