--- a/src/app/componentes/header/header.component.css
+++ b/src/app/componentes/header/header.component.css
@@ -1,22 +1,23 @@
-.nav-link {
-    padding: 5px 10px; /* Reduce el espacio interior */
-    font-size: 0.85rem; /* Ajusta el tamaño de texto */
-  }
-  
-  .nav-pills .nav-link.active {
-    background-color: #007bff; /* Cambia el color del botón activo */
-    color: white;
-  }
-  
-  .nav-item {
-    margin: 0 5px; /* Ajusta el espacio entre botones */
-  }
-  span.text-muted {
-    font-size: 0.9rem; /* Tamaño más pequeño para el texto */
-    font-weight: 500;  /* Negrita media */
-  }
-  
-  button.btn-sm {
-    padding: 0.25rem 0.5rem; /* Reduce el tamaño del botón */
-  }
-  
+:root {
+  --font-size: 16px;
+}
+
+body {
+  font-size: var(--font-size);
+  transition: all 0.3s ease-in-out;
+}
+
+.high-contrast {
+  background-color: #000 !important;
+  color: #fff !important;
+}
+
+.accessibility-buttons button {
+  border-radius: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.accessibility-buttons button:hover {
+  background-color: #0d6efd;
+  color: #fff;
+}
